service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kantin-service
spec:
  type: LoadBalancer
  selector:
    app: kantin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # Sesuaikan dengan port aplikasi kamu
